# paper-feeds

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  db.sqlite  pyproject.toml
.github/workflows/: lint.yml  tests.yml
src/journal_rss/: __init__.py  __main__.py  app.py  config.py  db.py  decorators.py  main.py
src/journal_rss/migrations/: README  alembic.ini  env.py
src/journal_rss/models/: __init__.py  feed.py  journal.py  paper.py  rss.py
src/journal_rss/services/: crossref.py  db.py
src/paper_feeds/: __init__.py  __main__.py  app.py  config.py  const.py  db.py  decorators.py  exceptions.py  logging.py  main.py
src/paper_feeds/migrations/: alembic.ini  env.py
src/paper_feeds/migrations/versions/: 202401032156-680a75a_initial_migration.py  202401072216-53341bd_add_homepage_url_to_journal.py
src/paper_feeds/models/: __init__.py  api.py  journal.py  paper.py  rss.py
src/paper_feeds/repositories/: journal_repository.py
src/paper_feeds/services/: crossref.py  db.py  journal_service.py  openalex.py  refresh.py
src/paper_feeds/static/css/: footer.css  header.css  search.css
src/paper_feeds/templates/includes/: footer-js.html  footer.html  header.html  section-search.html
src/paper_feeds/templates/pages/: index.html  journal.html
src/paper_feeds/templates/partials/: feed-list.html  paper-item.html  paper-list.html
src/static/css/: header.css  style.css  tables.css
src/templates/: index.html
src/templates/includes/: footer.html  head.html  header.html  section-search.html
src/templates/pages/: journal.html
src/templates/partials/: feed-list.html  make-feed-button.html  paper-list-preload.html  rss-button.html  search-button.html  test-button.html
src/templates/shared/: _layout.html  default.html  index.html
tests/: __init__.py  conftest.py  fixtures.py  test_crossref.py  test_decorators.py  test_journal_repository.py  test_migrations.py  test_openalex.py  test_paper.py  test_rss.py
