[tool.poetry]
name = "journal-rss"
version = "0.1.0"
description = "A FastAPI web server for creating RSS feeds for scholarly journals with the magic of adversarial interoperability"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    { include = "journal_rss", from="src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"
requests = "^2.31.0"
python-multipart = "^0.0.6"
pytest = {version = "^7.4.4", optional = true}
fastapi-rss = "^0.2.0"

[tool.poetry.extras]
tests = ['pytest']

[tool.poetry.scripts]
start = "journal_rss.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
