[tool.poetry]
name = "journal-rss"
version = "0.0.2"
description = "A FastAPI web server for creating RSS feeds for scholarly journals with the magic of adversarial interoperability"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    { include = "journal_rss", from="src" }
]
include = [
    "src/static/*",
    "src/templates/*"
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"
requests = "^2.31.0"
python-multipart = "^0.0.6"
fastapi-rss = "^0.2.0"
alembic = "^1.13.1"
pytest = {version = "^7.4.4", optional = true}
requests-cache = {version = "^1.1.1", optional = true}
coveralls = {version = "^3.3.1", optional = true}
pytest-cov = {version = "^4.1.0", optional = true}
pytest-alembic = {version = "^0.10.7", optional = true}
pytest-timeout = {version = "^2.2.0", optional = true}

[tool.poetry.extras]
tests = ['pytest', 'requests-cache', 'pytest-cov', 'coveralls', 'pytest-alembic', 'pytest-timeout']

[tool.poetry.scripts]
start = "journal_rss.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--cov=journal_rss",
    "--cov-append",
    "--cov-config=pyproject.toml",
]

[tool.coverage.run]
branch = true
source = ["src/journal_rss"]
omit = [
    "tests/*",
    "src/journal_rss/static/*",
    "src/journal_rss/templates/*"
]

